--- a/TensomUI/TensomUI.csproj
+++ b/TensomUI/TensomUI.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Processing\DataProcessing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Video\VideoUtil.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
