--- a/TensomUI/Spher_scara.csproj
+++ b/TensomUI/Spher_scara.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Connection\DeviceArduino.cs" />
     <Compile Include="Connection\DevicesArduino\DeviceMarlin.cs" />
     <Compile Include="Connection\DevicesArduino\Tensom.cs" />
+    <Compile Include="Connection\DevicesArduino\Scara.cs" />
     <Compile Include="Connection\TCPconnect.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
